fixed typecheck
